adding index meta tag for webmaster tools

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="google-site-verification" content="Xjc9v2RiSIwwv5sgILKfcUq_igbytrGMRFmByPluhaA" />
 		<title>  Secrets of Creative Multimedia Programming 2017 | Clodagh Guerin  </title>
 		<meta content="Home Page for The secrets of the HDip Springboard course in the Limerick Institute of Technology named Creative Multimedia Programming as explained by student Clodagh Guerin" name="description">
 		<meta content="programming, multimedia, creative, development, springboard, limerick, javascript, interface, diploma, graphics, course, about, design, html, css, php, web, lit, ui, ux" name="keywords">
