--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Below are links and descriptions to the different subjects covered over three se
         <a title="privacy policy" href="">Privacy Policy</a>
              <a title="terms of service" href="">Terms of service</a>
 			 <p class="footer">Clodagh Guerin / Creative Multimedia Programming / Web Design / Web Development / 3D Graphics / 3DS Max / Maya / Blender / Javascript / Programming / PHP / CSS / HTML5 / databases / Photoshop / Illustrator / InDesign / Adobe Creative Cloud / Prototyping / Axure / Wireframes / Interface / UX / UI / user-centered / jobs / projects / presentations / logo design / animation / Code Igniter / springboard / Higher Diploma</p>
-             <p width="100%">&copy; Clodagh Guerin</p>
+             <p>&copy; Clodagh Guerin</p>
         </div>
 
 </footer>
