--- a/project.html
+++ b/project.html
@@ -45,7 +45,8 @@
 </p>
 
 
- <img src="img/project.jpg" alt="animation screenshot 2d illustration"/>
+ <iframe src="https://player.vimeo.com/video/213130524" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/213130524">End Ageism</a> from <a href="https://vimeo.com/clodaghguerin">Clodagh Guerin</a> on <a href="https://vimeo.com">Vimeo</a>. Password="clodaghfyp"</p>
 	
 		
 		<h3 class="heading3">Continuous Assessment</h3>
