--- a/about.html
+++ b/about.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>About | Clodagh Guerin | Secrets of Creative Multimedia Programming 2017 </title>
-		<meta content="All About The secrets of the HDip Springboard course in the Limerick Institute of Technology named Creative Multimedia Programming as explained by student Clodagh Guerin" name="description">
+        <meta name="google-site-verification" content="Xjc9v2RiSIwwv5sgILKfcUq_igbytrGMRFmByPluhaA" />
+		<title>  About Creative Multimedia Programming | Clodagh Guerin  </title>
+		<meta content="Home Page for The secrets of the HDip Springboard course in LIT named Creative Multimedia Programming as explained by student Clodagh Guerin" name="description">
 		<meta content="programming, multimedia, creative, development, springboard, limerick, javascript, interface, diploma, graphics, course, about, design, html, css, php, web, lit, ui, ux" name="keywords">
-		<link rel="stylesheet" type="text/css" media="screen" href="css/screen2.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css">
 	</head>
 	<body>
 
